Importar jQuery en local

--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Prueba</title>
-    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+    <script src="js/jquery-3.2.1.js"></script>
     <script src="js/data.js"></script>
   </head>
   <body>
